# family_robot

./: .gitignore  AGENTS.md  BUILD_PROMPT.md  BUILD_STATE.md  README.md  pyproject.toml
.agents/skills/familyrobot-dev/: SKILL.md
apps/: __init__.py
apps/familyrobot/: __init__.py  __main__.py  main_loop.py  wiring.py
config/: android.yaml  base.yaml  desktop.yaml  raspberrypi.yaml
deploy/docker/: Dockerfile  README.md  docker-compose.yml  mosquitto.conf
docs/: specifications.md
docs/rules/: architecture.md  implementation-plan.md  progress-ledger.md  skills-catalog.md  tech-stack.md  testing-strategy.md
hardware/: FamilyRobot_BOM.md
prompts/: project_brief_v2.md
scratch/: test_perception_pipeline.py
test_aurdino/: board_specifications.md  test_aurdino.ino
tests/: conftest.py
tests/business/: .gitkeep
tests/contracts/: .gitkeep  test_audio_port.py  test_camera_port.py  test_home_port.py  test_notify_port.py  test_power_port.py
tests/functional/: .gitkeep
tests/regression/: .gitkeep
tests/unit/: test_cognition.py  test_config_wiring.py  test_expression.py  test_governance.py  test_main_loop.py  test_memory.py  test_perception.py  test_skills.py  test_smoke.py  test_webapp.py
